# DuplexEngine

./: .gitignore  .gitmodules  CMakeLists.txt  compiler.cmake
driver.d3d/: CMakeLists.txt  d3d11renderer.cpp  d3d11renderer.h
driver.graphics/: CMakeLists.txt  enums.h  renderer.cpp  renderer.h  shadercb.h
driver.vulkan/: CMakeLists.txt  vulkanrenderer.cpp  vulkanrenderer.h
engine.client/: AppWindow.cpp  AppWindow.h  CMakeLists.txt  camera.cpp  camera.h  client.cpp  client.h  d3d11renderer.cpp  d3d11renderer.h  directionallight.cpp  directionallight.h  flycamera.cpp  flycamera.h  main.cpp  meshrenderer.cpp  meshrenderer.h  openglrenderer.h  pointlight.cpp  pointlight.h  renderer.h  shadercb.h
engine.config/: CMakeLists.txt  engineconfig.cpp  engineconfig.h
engine.core/: CMakeLists.txt
engine.core/ecs/: coordinator.h
engine.core/ecs/components/: camera.h  component.cpp  component.h  componentarray.h  componentmanager.h  meshrenderer.h  transform.h
engine.core/ecs/entities/: entity.h  entitymanager.h
engine.core/ecs/systems/: camerasystem.h  lightsystem.h  meshsystem.h  system.h  systemmanager.h
engine.core/graphics/: bsdfmaterial.h  cubemap.cpp  cubemap.h  light.cpp  light.h  material.h  stb_image.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h
engine.core/input/: input.cpp  input.h
engine.editor/: CMakeLists.txt  editor.cpp  editor.h  main.cpp
engine.shared/: CMakeLists.txt  component.cpp  component.h  gameobject.cpp  gameobject.h  input.cpp  mesh.cpp  mesh.h  namespaces.h  objloader.h  results.h  time.cpp  time.h  transform.cpp  transform.h  vertex.h
engine.shared/ecs/: CMakeLists.txt  entity.cpp  entity.h
engine.shared/math/: CMakeLists.txt  mat4x4.cpp  mat4x4.h  mathutils.h  quaternion.cpp  quaternion.h  types.h  vec2.cpp  vec2.h  vec2int.cpp  vec2int.h  vec3.cpp  vec3.h
engine.shared/utils/: CMakeLists.txt  color.cpp  color.h  exceptions.h  singleton.h  util.h
engine.window/: CMakeLists.txt  test.h  window.cpp  window.h
res/: resources.rc  shadercompiler.bat  structures.hlsl
res/ps/: bsdfPixel.hlsl  pixelDefault.hlsl  pixelSDFDefault.hlsl
res/vs/: bsdfVertex.hlsl  vertexDefault.hlsl
